# ml-trading-system

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
configs/: main.yaml
scripts/: download_data.py
src/trading/: __init__.py
src/trading/backtest/: __init__.py
src/trading/calibration/: __init__.py
src/trading/config/: __init__.py  loader.py  schema.py
src/trading/data/: __init__.py  cache.py  download.py  validate.py
src/trading/features/: __init__.py
src/trading/labels/: __init__.py
src/trading/metrics/: __init__.py
src/trading/models/: __init__.py
src/trading/signals/: __init__.py
src/trading/validation/: __init__.py
src/trading/viz/: __init__.py
tests/: test_config.py  test_data_cache.py  test_data_validate.py  test_smoke.py
